--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,7 @@
         app:layout_constraintTop_toBottomOf="@+id/calendarBtn" />
 
     <TextView
-        android:id="@+id/TestTV"
+        android:id="@+id/testTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -126,7 +126,7 @@
         tools:layout_editor_absoluteY="318dp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/test2TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -136,7 +136,7 @@
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TestTV"
+        app:layout_constraintTop_toBottomOf="@+id/testTV"
         app:layout_constraintVertical_bias="0.43" />
 
 </android.support.constraint.ConstraintLayout>
