--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -140,4 +140,23 @@
         app:layout_constraintTop_toBottomOf="@+id/cr_l_tag"
         app:layout_constraintVertical_bias="0.0" />
 
+    <TextView
+        android:id="@+id/cr_popup"
+        android:layout_width="201dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="158dp"
+        android:layout_marginRight="158dp"
+        android:layout_marginBottom="45dp"
+        android:text="Meet successfully created!"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.378"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cr_create"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="Meet successfully created!" />
+
 </android.support.constraint.ConstraintLayout>
