--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/common_google_signin_btn_text_light_pressed"
     tools:context=".MainActivity">
 
     <Button
@@ -16,6 +16,7 @@
         android:layout_marginTop="56dp"
         android:background="@android:drawable/alert_dark_frame"
         android:drawableTop="@android:drawable/ic_search_category_default"
+        android:fontFamily="serif-monospace"
         android:text="@string/FindButton"
         android:textColor="@color/colorAccent"
         android:textSize="20sp"
@@ -34,6 +35,7 @@
         android:layout_marginRight="8dp"
         android:background="@android:drawable/alert_dark_frame"
         android:drawableTop="@android:drawable/ic_menu_my_calendar"
+        android:fontFamily="serif-monospace"
         android:text="@string/CalendarButton"
         android:textColor="@color/colorAccent"
         android:textSize="20sp"
@@ -51,6 +53,7 @@
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/alert_dark_frame"
         android:drawableTop="@android:drawable/ic_menu_view"
+        android:fontFamily="serif-monospace"
         android:text="@string/ViewGroupButton"
         android:textColor="@color/colorAccent"
         android:textSize="20sp"
@@ -71,6 +74,7 @@
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/alert_dark_frame"
         android:drawableTop="@android:drawable/ic_menu_edit"
+        android:fontFamily="serif-monospace"
         android:text="@string/CreateButton"
         android:textColor="@color/colorAccent"
         android:textSize="20sp"
@@ -91,6 +95,7 @@
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/alert_dark_frame"
         android:drawableTop="@android:drawable/ic_menu_myplaces"
+        android:fontFamily="serif-monospace"
         android:text="@string/ProfileButton"
         android:textColor="@color/colorAccent"
         android:textSize="20sp"
