--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/common_google_signin_btn_text_light_pressed"
     tools:context=".ProfileActivity">
 
     <EditText
@@ -16,6 +17,7 @@
         android:layout_marginEnd="95dp"
         android:layout_marginRight="95dp"
         android:layout_marginBottom="33dp"
+        android:background="@color/colorPrimary"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="type course here"
@@ -34,9 +36,11 @@
         android:layout_marginEnd="95dp"
         android:layout_marginRight="95dp"
         android:layout_marginBottom="14dp"
+        android:background="@color/colorPrimary"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="type name here"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/pro_course"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +54,9 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="2dp"
+        android:fontFamily="monospace"
         android:text="Please type in ur Name and course so that u participate in meets"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/pro_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +72,9 @@
         android:layout_marginEnd="96dp"
         android:layout_marginRight="96dp"
         android:layout_marginBottom="244dp"
+        android:background="@color/colorPrimary"
         android:text="save"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
